<resources>
    <string name="app_name">BookingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_myplace">Добро пожаловать в MyPlace!</string>
    <string name="get_registered">Зарегистрируйтесь или войдите в свою учетную запись</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="name">Имя</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Пароль</string>
    <string name="create_account">Создать учетную запись</string>
    <string name="surname">Фамилия</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="tvRegister">Регистрация</string>
    <string name="tv_sign_in">Войдите в свою учетную запись</string>
    <string name="tv_welcome_to_my_place">Добро пожаловать в вашу учетную запись !</string>
    <string name="tv_register_now">Зарегистрироваться</string>
    <string name="et_phone_number">Телефон</string>
    <string name="btn_logout">Выйти</string>
    <string name="email">Email</string>
    <string name="your_email">Ваш электронный адрес:</string>
    <string name="forgotPassword">Введите электронную почту для восстановления пароля</string>
    <string name="add">Добавить</string>
    <string name="add_booking">Добавить</string>
    <string name="logout">Выйти</string>
</resources>